<?xml version="1.0" encoding="utf-8"?>

<resources>
    <!--jiepang-->
    <string name="hyphen">-</string>

    <!--self-->
    <string name="app_name">Find High</string>
    <string name="content_column">Content</string>
    <string name="page_referrers">Referrers</string>
    <string name="refresh_action">Refresh</string>
    <string name="logout_action">Logout</string>
    <string name="page_friend">Friend</string>
    <string name="page_users">Users</string>
    <string name="page_activities">Activities</string>
    <string name="title_column">Title</string>
    <!--<string name="location_column">Location</string>-->
    <string name="user_column">User</string>
    <string name="date_column">Date</string>
    <string name="error_loading_users">Loading ABUsers failed</string>
    <string name="error_loading_friend">Loading friends failed</string>
    <string name="error_loading_activities">Loading activities failed</string>
    <string name="no_users">No Users</string>
    <string name="no_friend">No Friends</string>
    <string name="avatar">Avatar</string>
    <string name="choose">Choose</string>

    <!-- AuthenticatorActivity -->
    <string name="label_email">Email Address</string>
    <string name="label_password">Password</string>
    <string name="label_sign_in">Sign In</string>
    <string name="message_signing_in">Signing in…</string>
    <string name="blank_field_warning">Please populate this field</string>
    <string name="signup_link">New User? &lt;a href=http://192.168.1.4:3002/users/sign_up>Click here&lt;/a> to sign up.</string>
    <string name="message_bad_credentials">Email Address or Password is incorrect</string>
    <string name="message_auth_failed">Please enter a valid password</string>
    <string name="message_auth_failed_new_account">Please enter a valid email address &amp; password</string>

    <!--Form-->
    <string name="require_field_warning">Please populate require field</string>
    <string name="no_google_map">Google Maps are not available -- sorry!</string>
    <string name="alter_activity_point">are you sure hold activity in this place？</string>
    <string name="format_alter_message" formatted="false">Place name：%s\nAddress：%s</string>
    <string name="select_point_name">It\'s "%s",click it again to select it for activity.</string>

    <string name="label_activity_desc">Description</string>
    <string name="label_activity_address">Address</string>
    <string name="label_activity_started_at">Start At</string>
    <string name="label_activity_finished_at">Finish At</string>
    <string name="label_activity_user">Holder</string>
    <string name="label_activity_users">Users</string>
    <string name="label_activity_interested_users">Interested Users</string>

    <string name="set_started_at">Please select activity start time</string>
    <string name="set_join_message">Message to activity holder</string>
    <string name="menu_activity_join">Join</string>
    <string name="menu_activity_quit">Quit</string>
    <string name="menu_activity_invite">Invite</string>
    <string name="menu_activity_close">Close</string>
    <string name="menu_activity_requests">Join Requests</string>

    <string name="dialog_sure">Are you sure？</string>
    <string name="page_new_activity">Hold Activity</string>
    <string name="label_notification_type">Type</string>
    <string name="label_notification_created_at">At</string>
    <string name="label_notification_follower">Follower</string>
    <string name="label_activity">Activity</string>
    <string name="label_notification_reply_admin">Reply Admin</string>
    <string name="label_notification_reply_status">Reply Status</string>
    <string name="label_notification_interesting_user">Interesting</string>
    <string name="label_activity_request_text">Request Text</string>
    <string name="label_notification_invite_user">Invitees</string>
    <string name="notifications">Notifications</string>
    <string name="access">Accept</string>
    <string name="deny">Deny</string>
    <string name="already_deal">Have been processed</string>
    <string name="label_notification_deal">Status</string>
    <string name="label_test">Try</string>
    <string name="label_signup">Sign Up</string>
    <string name="label_password_confirmation">Password Confirmation</string>
    <string name="label_gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="label_name">Nickname</string>
    <string name="errors">Errors</string>

    <string name="points_hold">Hold</string>
    <string name="points_join">Join</string>
    <string name="points_interested">Interested</string>
    <string name="follow">Follow</string>
    <string name="msg_send">Message Send</string>

    <!--relationship-->
    <string name="friend">friend</string>
    <string name="following">following</string>
    <string name="follower">follower</string>
    <string name="message_follow_failure">Follow Failure</string>
</resources>
