<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <!--<item android:id="@+id/menu_join" android:showAsAction="ifRoom"-->
          <!--android:title="add"-->
            <!--/>-->
    <item android:id="@+id/menu_join" android:showAsAction="always"
          android:title="@string/menu_activity_join"
          android:visible="false"
            />

    <item android:id="@+id/menu_leave" android:showAsAction="always"
          android:title="@string/menu_activity_quit"
          android:visible="false"
    />
    <item android:id="@+id/menu_invite" android:showAsAction="never"
          android:title="@string/menu_activity_invite"
          android:visible="false"
    />
    <item android:id="@+id/menu_close" android:showAsAction="never"
          android:title="@string/menu_activity_close"
          android:visible="false"
    />
</menu>