<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="5dp" >


            <TextView
                    style="@style/ShadowText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="10dp"
                    android:text="@string/label_gender"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/text" />

            <RadioGroup
                    android:id="@+id/rg_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                <!--第一個RadioButton -->
                <RadioButton
                        android:id="@+id/rb_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/female"
                        android:checked="true"/>
                <!--第二個RadioButton -->
                <RadioButton
                        android:id="@+id/rb_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/male"
                        />
            </RadioGroup>


            <TextView
                    style="@style/ShadowText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="10dp"
                    android:text="@string/label_name"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/text" />

            <EditText
                    android:id="@+id/et_name"
                    style="@style/SignInEditText"
                    android:imeOptions="actionNext"
                    android:nextFocusDown="@+id/et_email" />

            <TextView
                style="@style/ShadowText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/label_email"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/text" />

            <EditText
                android:id="@+id/et_email"
                style="@style/SignInEditText"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:nextFocusDown="@+id/et_password" />

            <TextView
                style="@style/ShadowText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="10dp"
                android:text="@string/label_password"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/text" />

            <EditText
                android:id="@+id/et_password"
                style="@style/SignInEditText"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:password="true"
                android:nextFocusDown="@+id/et_password_confirmation" />

            <TextView
                    style="@style/ShadowText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="10dp"
                    android:text="@string/label_password_confirmation"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/text" />

            <EditText
                    android:id="@+id/et_password_confirmation"
                    style="@style/SignInEditText"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:password="true" />

            <Button
                android:id="@+id/b_signuup"
                style="@style/ShadowText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:background="@drawable/button_background_states"
                android:gravity="center"
                android:onClick="handleReg"
                android:padding="10dp"
                android:text="@string/label_signup"
                android:textColor="@color/text"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>