<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
    <TableLayout android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:shrinkColumns="1"
            >
        <!--<TableRow-->
                <!--android:layout_width="fill_parent"-->
                <!--android:layout_height="fill_parent"-->
                <!--android:id="@+id/tr_type"-->
                <!-->-->
            <!--<TextView-->
                    <!--android:layout_width="fill_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:textColor="?android:attr/textColorPrimaryInverse"-->
                    <!--android:text="@string/label_notification_type"-->
                    <!--style="@style/ShadowText"/>-->
            <!--<TextView-->
                    <!--android:id="@+id/tv_type"-->
                    <!--android:layout_width="fill_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
                    <!--android:textColor="@color/table_text_selector" android:layout_marginLeft="5dp"-->
                    <!--android:maxLines="4"-->
                    <!--android:singleLine="false"-->
                    <!--/>-->
        <!--</TableRow>-->
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/tr_created_at"
                >
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="?android:attr/textColorPrimaryInverse"
                    android:text="@string/label_notification_created_at"
                    style="@style/ShadowText"/>
            <TextView
                    android:id="@+id/tv_created_at"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:maxLines="4"
                    android:singleLine="false"
                    android:textColor="@color/table_text_selector" android:layout_marginLeft="5dp"/>
        </TableRow>
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/tr_follower"
                android:visibility="gone">
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_notification_follower"          style="@style/ShadowText"
                    android:textColor="?android:attr/textColorPrimaryInverse"/>
            <TextView
                    android:id="@+id/tv_follower"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/table_text_selector" android:layout_marginLeft="5dp"/>
        </TableRow>
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/tr_activity"
                android:visibility="gone">
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="?android:attr/textColorPrimaryInverse"
                    android:text="@string/label_activity"          style="@style/ShadowText"/>
            <TextView
                    android:id="@+id/tv_activity"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/table_text_selector" android:layout_marginLeft="5dp"/>
        </TableRow>
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/tr_reply_admin"
                android:visibility="gone">
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="?android:attr/textColorPrimaryInverse"
                    android:text="@string/label_notification_reply_admin"
                    style="@style/ShadowText"/>
            <TextView
                    android:id="@+id/tv_reply_admin"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/table_text_selector" android:layout_marginLeft="5dp"/>
        </TableRow>
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/tr_reply_status"
                android:visibility="gone">
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="?android:attr/textColorPrimaryInverse"
                    android:text="@string/label_notification_reply_status"          style="@style/ShadowText"/>
            <TextView
                    android:id="@+id/tv_reply_status"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/table_text_selector" android:layout_marginLeft="5dp"/>
        </TableRow>
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/tr_interesting_user"
                android:visibility="gone">
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_notification_interesting_user"          style="@style/ShadowText"
                    android:textColor="?android:attr/textColorPrimaryInverse"/>
            <TextView
                    android:id="@+id/tv_interesting_user"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/table_text_selector" android:layout_marginLeft="5dp"/>
        </TableRow>
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/tr_activity_request_text"
                android:visibility="gone">
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_activity_request_text"          style="@style/ShadowText"
                    android:textColor="?android:attr/textColorPrimaryInverse"/>
            <TextView
                    android:id="@+id/tv_activity_request_text"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/table_text_selector" android:layout_marginLeft="5dp"/>
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/tr_invite_user"
            android:visibility="gone">
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_notification_invite_user"          style="@style/ShadowText"
                    android:textColor="?android:attr/textColorPrimaryInverse"/>
            <TextView
                    android:id="@+id/tv_invite_user"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/table_text_selector" android:layout_marginLeft="5dp"/>
        </TableRow>
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/tr_deal"
                android:visibility="gone">
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_notification_deal"
                    style="@style/ShadowText"
                    android:textColor="?android:attr/textColorPrimaryInverse"/>
            <TextView
                    android:id="@+id/tv_invite_user"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/table_text_selector"
                    android:text="@string/already_deal"
                    android:layout_marginLeft="5dp"/>
        </TableRow>

    </TableLayout>
    <LinearLayout android:orientation="horizontal"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content">
        <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:id="@+id/btn_left"
                android:text="@string/access"
                ></Button>
        <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:id="@+id/btn_right"
                android:text="@string/deny"
                ></Button>
    </LinearLayout>
</LinearLayout>