<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">
    <!--<ImageView-->
    <!--android:id="@+id/iv_avatar"-->
    <!--style="@style/AvatarLarge"-->
    <!--android:layout_alignParentLeft="true"-->
    <!--android:layout_alignParentTop="true"-->
    <!--android:layout_marginRight="10dp"-->
    <!--android:contentDescription="@string/avatar"-->
    <!--/>-->
    <TableLayout android:layout_width="fill_parent"
                 android:layout_height="fill_parent">
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="?android:attr/textColorPrimaryInverse"
                    android:text="@string/label_activity_desc"
                    style="@style/ShadowText"/>
            <TextView
                    android:id="@+id/tv_desc"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/table_text_selector" android:layout_marginLeft="5dp"/>
        </TableRow>
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="?android:attr/textColorPrimaryInverse"
                    android:text="@string/label_activity_address"
                    style="@style/ShadowText"/>
            <TextView
                    android:id="@+id/tv_address"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/table_text_selector" android:layout_marginLeft="5dp"/>
        </TableRow>
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="?android:attr/textColorPrimaryInverse"
                    android:text="@string/label_activity_started_at"          style="@style/ShadowText"/>
            <TextView
                    android:id="@+id/tv_started_at"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/table_text_selector" android:layout_marginLeft="5dp"/>
        </TableRow>
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="?android:attr/textColorPrimaryInverse"
                    android:text="@string/label_activity_finished_at"
                             style="@style/ShadowText"/>
            <TextView
                    android:id="@+id/tv_finished_at"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/table_text_selector" android:layout_marginLeft="5dp"/>
        </TableRow>
        <!--<TableRow-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="fill_parent">-->
        <!--<TextView-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--/>-->
        <!--<TextView-->
        <!--android:id="@+id/tv_status"-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
        <!--android:textColor="@color/table_text_selector"/>-->
        <!--</TableRow>-->
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="?android:attr/textColorPrimaryInverse"
                    android:text="@string/label_activity_user"          style="@style/ShadowText"/>
            <TextView
                    android:id="@+id/tv_user"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/table_text_selector" android:layout_marginLeft="5dp"/>
        </TableRow>
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_activity_users"          style="@style/ShadowText"
                    android:textColor="?android:attr/textColorPrimaryInverse"/>
            <TextView
                    android:id="@+id/tv_users"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/table_text_selector" android:layout_marginLeft="5dp"/>
        </TableRow>
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_activity_interested_users"          style="@style/ShadowText"
                    android:textColor="?android:attr/textColorPrimaryInverse"/>
            <TextView
                    android:id="@+id/tv_interested_users"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/table_text_selector" android:layout_marginLeft="5dp"/>
        </TableRow>
    </TableLayout>
</LinearLayout>
